--- a/README
+++ b/README
@@ -6,7 +6,8 @@ HostsAccess
 
 Usage
 =====
-  config/environment.rb:
+  config/environment.rb (in Rails)
+  config/init.rb        (in Merb)
 
     # specify hosts to allow access
     HostsAccess.allow = ['127.0.0.1', 'ac.wota.jp']
@@ -19,6 +20,14 @@ Note
 
   All accesses are allowed if no rules are given
 
+
+Environment
+===========
+
+  tested on
+
+  * Rails 1.2
+  * Merb 1.0.3
 
 
 Copyright (c) 2008 maiha@wota.jp, released under the MIT license
